[gd_scene load_steps=2 format=3 uid="uid://cafhpk3wjdgsm"]

[ext_resource type="Script" path="res://components/movement_circle.gd" id="1_i2v42"]

[node name="MovementCircle" type="Node2D"]
script = ExtResource("1_i2v42")

[node name="North" type="RayCast2D" parent="."]

[node name="NorthE" type="RayCast2D" parent="."]

[node name="NorthEast" type="RayCast2D" parent="."]

[node name="NEast" type="RayCast2D" parent="."]

[node name="East" type="RayCast2D" parent="."]

[node name="SEast" type="RayCast2D" parent="."]

[node name="SouthEast" type="RayCast2D" parent="."]

[node name="SouthE" type="RayCast2D" parent="."]

[node name="South" type="RayCast2D" parent="."]

[node name="SouthW" type="RayCast2D" parent="."]

[node name="SouthWest" type="RayCast2D" parent="."]

[node name="SWest" type="RayCast2D" parent="."]

[node name="West" type="RayCast2D" parent="."]

[node name="NWest" type="RayCast2D" parent="."]

[node name="NorthWest" type="RayCast2D" parent="."]

[node name="NorthW" type="RayCast2D" parent="."]
